--- a/gay.html
+++ b/gay.html
@@ -1,4 +1,6 @@
-<style>
+<head>
+	<meta name="og:image" content="/gay.gif">
+	<style>
 /*  Copyright under MIT - 2021 gk/gtk/6gk  */
 html {
 	animation: rainbow 7s linear infinite !important;
@@ -22,4 +24,5 @@ html {
 	83%  { background: var(--pink) }
 	100% { background: var(--red) }
 }
-</style>
+	</style>
+</head>
