--- a/gay.html
+++ b/gay.html
@@ -1,5 +1,6 @@
 <head>
 	<meta name="og:image" content="/gay.gif">
+	<meta name="twitter:card" content="summary_large_image">
 	<style>
 /*  Copyright under MIT - 2021 gk/gtk/6gk  */
 html {
